Fixed issue with the main element.
WHen I introduced the main element, I put it in such a place that it
overlapped with another element.  The problem is that the id=mayura
div intersects (instead of subsumes) the main element.

I fixed it by duplicating the css that was for id=mayura into that for
the element main.  And then ended the id=mayura before the main
element starts.  Whatta hack.

--- a/mayura-indian-restaurant.com/css/style.css
+++ b/mayura-indian-restaurant.com/css/style.css
@@ -9,7 +9,16 @@ body {
     text-align:center;
     color:#74746B;
 } 
+
 #mayura {
+    background-repeat:no-repeat;
+    width:764px;
+    margin:0 auto;
+    clear:both;
+}
+
+/* Same as #mayura for backwards compatibility */
+main {
     background-repeat:no-repeat;
     width:764px;
     margin:0 auto;
